[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name          = "spoti-py"
version       = "0.2.0"
description   = "An async wrapper for the Spotify Web API."
license       = "MIT"
authors       = ["Axel <axelancerr@gmail.com>"]
readme        = "README.md"
homepage      = "https://github.com/Axelware/spoti-py"
repository    = "https://github.com/Axelware/spoti-py"
documentation = "https://spoti-py.readthedocs.io/en/latest/"
keywords      = ["spotify", "api", "wrapper", "async"]
include       = ["CHANGELOG.md", "LICENSE"]
classifiers = [
    "Framework :: AsyncIO",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed"
]
packages = [
    { include = "spotipy" },
    { include = "spotipy/**/*.py" },
    { include = "spotipy/**/*.typed" },
]


[tool.poetry.dependencies]
python              = "^3.10.0"
aiohttp             = "^3.8.0"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx             = "5.1.1"
sphinxcontrib-trio = "1.1.2"
sphinx-copybutton  = "0.5.0"
sphinx-inline-tabs = "2022.1.2b11"
furo               = "2022.6.21"


[tool.poetry.urls]
"Issue Tracker" = "https://github.com/Axelware/spoti-py/issues"
"Discord"       = "https://discord.com/invite/w9f6NkQbde"


[tool.pyright]
include                     = ["spotipy"]
pythonVersion               = "3.10"
typeCheckingMode            = "strict"
useLibraryCodeForTypes      = true

reportMissingTypeStubs      = false
reportPrivateImportUsage    = false
reportPrivateUsage          = false
reportFunctionMemberAccess  = false
reportUnknownMemberType     = false
reportUnknownVariableType   = false
reportUnknownArgumentType   = false
reportImportCycles          = false
